# markdown-mcp

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy_main.yaml  execute_main_tests.yaml
examples/: README.md  javascript_example.js  python_example.py
src/: main.py  models.py  settings.py  splitter.py
src/configs/: logging.yaml
tests/: conftest.py  test_splitter.py
