[project]
name = "markdown-mcp"
version = "0.1"
description = "An MCP server for chunking Markdown documents."
authors = [
    {name = "Gal Gilor", email = "gilorgal2010@gmail.com"}
]
packages = [{include = "src"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)", 
    "fastmcp (>=2.7.0,<3.0.0)", 
    "httpx (>=0.28.1,<0.29.0)", 
    "uvicorn (>=0.34.3,<0.35.0)", 
    "fastapi (>=0.115.12,<0.116.0)"
]

[project.urls]
Github = "https://github.com/Gal-Gilor/markdown-mcp"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^23.0"
isort = ">=5.13.2,<6.0.0"
ruff = ">=0.9.3,<0.10.0"
ipykernel = ">=6.29.5,<7.0.0"
pytest-asyncio = "^1.0.0"
pytest = "^8.4.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]